force-app/main/default/objects/Survey__c/fields/All_Responses_Anonymous__c.field-meta.xml
<CustomField>
    <fullName>All_Responses_Anonymous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Overrides all other settings and does not link responses to a person</description>
    <inlineHelpText>Force all responses to this survey to be recorded anonymously</inlineHelpText>
    <label>All Responses Anonymous</label>
    <type>Checkbox</type>
</CustomField>