force-app/main/default/objects/Survey__c/fields/Survey_Container_CSS__c.field-meta.xml
<CustomField>
    <fullName>Survey_Container_CSS__c</fullName>
    <defaultValue>&quot;#survey_container{margin: 10px}&quot;</defaultValue>
    <inlineHelpText>Example: #survey_container{ margin: 0 auto; width: 600px; box-shadow: 0 0 14px #CCCCCC; -moz-box-shadow: 0 0 14px #CCCCCC; -webkit-box-shadow: 0 0 14px #CCCCCC; }</inlineHelpText>
    <label>Survey Container CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>