force-app/main/default/objects/Survey__c/fields/Thank_You_Link__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Link__c</fullName>
    <inlineHelpText>URL for redirecting the user after the survey is completed. The Thank You Text will not be shown if this field has a value.</inlineHelpText>
    <label>Thank You Link</label>
    <type>Url</type>
</CustomField>