force-app/main/default/objects/Survey__c/fields/Thank_You_Text__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Text__c</fullName>
    <description>Message to be displayed to the user when the Survey has been submitted</description>
    <inlineHelpText>Message to be displayed to the user when the Survey has been submitted</inlineHelpText>
    <label>Thank You Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>